--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div>
             <input id="product" type="text" autofocus >
             <button onclick="product.save()" id="save" autofocus>Adicionar</button>
+            <button onclick="product.download()" id="download" autofocus>Salvar</button>
         </div>
 
         
