--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index-style.css">
-    <title>Document</title>
+    <title>Lista</title>
 </head>
 <body>
     <header>
@@ -16,10 +16,7 @@
         <div>
             <input id="product" type="text" autofocus >
             <button onclick="product.save()" id="save" autofocus>Adicionar</button>
-            <button onclick="product.download()" id="download" autofocus>Salvar</button>
         </div>
-
-        
         <div id="contents">
             <table>
                 <tbody id="tbody">
